# Orchestrix-Evolve

./: .gitignore  README.md  docker-compose.yml
.github/workflows/: README.md  ci.yml  deploy.yml  pr-checks.yml  security.yml
backend/: .dockerignore  .env.example  Dockerfile  SUPABASE_MIGRATION.md  auth.py  conflict_detector.py  constants.py  database.py  main.py  migrate_to_supabase.py  models.py  orchestrator.py  pyproject.toml  pytest.ini  requirements.txt  scheduler.py  schemas.py
backend/agents/: __init__.py  analysis.py  citation.py  conflict_detector.py  digest_scheduler.py  discovery.py  roadmap.py  summarizer.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial.py
backend/tests/: conftest.py  test_api.py  test_auth.py  test_citation.py  test_conflict_detector.py  test_database.py  test_models.py  test_roadmap.py  test_schemas.py
frontend/: .env.example  .eslintrc.cjs  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  tsconfig.node.json
frontend/src/: App.jsx  App.tsx  api.js  api.ts  app.css  component.css
frontend/src/components/: AgentTraceLog.jsx  AgentTraceLog.tsx  AnalysisCharts.jsx  AnalysisCharts.tsx  CitationPanel.jsx  CitationPanel.tsx  ConflictsPanel.jsx  ConflictsPanel.tsx  DigestManagement.jsx  DigestManagement.tsx  ErrorBoundary.jsx  ErrorBoundary.tsx  PaperCard.jsx  PaperCard.tsx  RoadmapPanel.jsx  RoadmapPanel.tsx  SessionSidebar.jsx  SessionSidebar.tsx  SummaryPanel.jsx  SummaryPanel.tsx
frontend/src/contexts/: AuthContext.jsx  AuthContext.tsx  ThemeContext.jsx  ThemeContext.tsx  (+1 more)
(+13 files in other folders)
