[project]
name = "orchestrix-backend"
version = "2.0.0"
description = "AI-powered research intelligence platform backend"
requires-python = ">=3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --cov=./ --cov-report=term --cov-report=html --ignore=venv --ignore=.venv"
filterwarnings = [
    "ignore::DeprecationWarning:supabase",
    "ignore::PendingDeprecationWarning",
]

[tool.coverage.run]
omit = ["tests/*", "venv/*", ".venv/*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.ruff.format]
quote-style = "double"
